--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,5 +10,8 @@ spring.mvc.view.suffix=
 spring.main.web-application-type=servlet
 server.error.whitelabel.enabled=false
 
+server.servlet.context-path=/api
+springdoc.api-docs.path=/swagger
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
