--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,9 +1,10 @@
 spring.application.name=elections
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/elections
+# MySQL database connection
+spring.datasource.url=jdbc:mysql://localhost:3306/elections
 spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mvc.view.prefix=
 spring.mvc.view.suffix=
@@ -13,7 +14,6 @@ server.error.whitelabel.enabled=false
 server.servlet.context-path=/api
 springdoc.api-docs.path=/swagger
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Hibernate dialect for MySQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
-#spring.profiles.active=dev
