--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,21 +2,23 @@
   "name": "frontend",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "build-only": "vite build",
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "preview": "vite preview",
+    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+    "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "autoprefixer": "^10",
     "pinia": "^2.1.7",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
@@ -42,6 +44,8 @@
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vitest": "^1.6.0",
+    "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-tsc": "^2.0.21"
-  }
+  },
+  "type": "module"
 }
