Added: logic for the registration logic.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=elections
+cors.origin=http://localhost:5173
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/elections
 spring.datasource.username=root
