--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,4 +1,8 @@
 spring.application.name=elections
+cors.origin=http://localhost:5173
+jwt.expiration=86400000
+jwt.refresh.expiration=604800000
+
 
 # MySQL database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/elections
