--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=elections
 cors.origin=http://localhost:5173
+jwt.expiration=86400000
+jwt.refresh.expiration=604800000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/elections
 spring.datasource.username=root
