--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "install": "^0.13.0",
+    "npm": "^10.9.0",
     "pinia": "^2.1.7",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
