--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10",
+    "chart.js": "^4.4.5",
     "install": "^0.13.0",
     "npm": "^10.9.0",
     "pinia": "^2.1.7",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.4.29",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
