--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@primevue/themes": "^4.1.1",
     "autoprefixer": "^10",
     "chart.js": "^4.4.5",
     "install": "^0.13.0",
     "npm": "^10.9.0",
     "pinia": "^2.1.7",
     "postcss": "^8",
+    "primevue": "^4.1.1",
     "tailwindcss": "^3",
     "vue": "^3.4.29",
     "vue-chartjs": "^5.3.1",
