--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ jwt.expiration=86400000
 jwt.refresh.expiration=604800000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/elections
-spring.datasource.username=gavintjin
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mvc.view.prefix=
