--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "npm": "^10.9.0",
     "pinia": "^2.1.7",
     "postcss": "^8",
+    "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
     "tailwindcss": "^3",
     "vue": "^3.4.29",
