Added: non-local-environments.

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -3,12 +3,10 @@ cors.origin=http://localhost:5173
 jwt.expiration=86400000
 jwt.refresh.expiration=604800000
 
-
-# MySQL database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/elections
+spring.datasource.url=jdbc:postgresql://localhost:5432/elections
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mvc.view.prefix=
 spring.mvc.view.suffix=
@@ -18,6 +16,14 @@ server.error.whitelabel.enabled=false
 server.servlet.context-path=/api
 springdoc.api-docs.path=/swagger
 
-# Hibernate dialect for MySQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+#spring.profiles.active=dev
