--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ cors.origin=http://localhost:5173
 jwt.expiration=86400000
 jwt.refresh.expiration=604800000
 
-spring.datasource.url=jdbc:postgresql://dpg-cspkt20gph6c73edpj9g-a.frankfurt-postgres.render.com/elections_yai5
+spring.datasource.url=jdbc:postgresql://localhost:5432/elections
 spring.datasource.username=root
-spring.datasource.password=KyFoKGkOAO5NfBPhcX2vivYREBWqCpbP
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mvc.view.prefix=
@@ -19,13 +19,11 @@ springdoc.api-docs.path=/swagger
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-spring.mail.host=smtp.sendgrid.net
-spring.mail.port=587
-spring.mail.username=apikey
-spring.mail.password=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
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.from=aaron.laan@hva.nl
-
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
 
 #spring.profiles.active=dev
