--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "@primevue/forms": "^4.2.1",
     "@primevue/themes": "^4.1.1",
     "@stomp/stompjs": "^7.0.0",
     "autoprefixer": "^10",
@@ -24,11 +25,12 @@
     "pinia": "^2.1.7",
     "postcss": "^8",
     "primeicons": "^7.0.0",
-    "primevue": "^4.1.1",
+    "primevue": "^4.2.1",
+    "quill": "^2.0.2",
     "tailwindcss": "^3",
     "vue": "^3.4.29",
     "vue-chartjs": "^5.3.1",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5"Wo
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
