--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     "tailwindcss": "^3",
     "vue": "^3.4.29",
     "vue-chartjs": "^5.3.1",
-    "vue-router": "^4.4.5"Wo
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
