--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@primevue/themes": "^4.1.1",
     "autoprefixer": "^10",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.5",
     "install": "^0.13.0",
     "leaflet": "^1.9.4",
