--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10",
     "chart.js": "^4.4.6",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "npm": "^10.9.0",
     "pinia": "^2.1.7",
     "postcss": "^8",
@@ -36,6 +37,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
