Added: first logic for deploying.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=elections
 cors.origin=http://localhost:5173
+server.port=8080
 jwt.expiration=86400000
 jwt.refresh.expiration=604800000
 
 spring.datasource.url=jdbc:postgresql://dpg-cspkt20gph6c73edpj9g-a.frankfurt-postgres.render.com/elections_yai5
 spring.datasource.username=root
 spring.datasource.password=KyFoKGkOAO5NfBPhcX2vivYREBWqCpbP
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mvc.view.prefix=
 spring.mvc.view.suffix=
@@ -28,4 +29,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.from=aaron.laan@hva.nl
 
 
-#spring.profiles.active=dev
+#spring.profiles.active=
