--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "vite --port 7419",
     "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview --port 7419 --host",
     "test:unit": "vitest",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
+    "test:e2e": "playwright test",
+    "build-only": "vite build --mode production",
+    "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "build-only": "vite build",
-    "dev": "vite",
-    "format": "prettier --write src/",
-    "preview": "vite preview",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "type-check": "vue-tsc --build --force"
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "@primevue/forms": "^4.2.1",
