--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,4 +28,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.from=aaron.laan@hva.nl
 
 
-spring.profiles.active=dev
+#spring.profiles.active=dev
