Fixed: build errors.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,13 @@ services:
       - "7420:7420"
     depends_on:
       - database
+      - mailserver
     networks:
       - election-network
     environment:
       PG_HOST: database
+      MAIL_HOST: mailserver
+      MAIL_PORT: 1025
     restart: unless-stopped
 
   database:
@@ -39,6 +42,15 @@ services:
       POSTGRES_DB: elections
     volumes:
       - hva-elections:/var/lib/postgresql/data
+    networks:
+      - election-network
+    restart: unless-stopped
+
+  mailserver:
+    image: mailhog/mailhog:latest
+    ports:
+      - "8025:8025" # Web UI
+      - "1025:1025" # SMTP
     networks:
       - election-network
     restart: unless-stopped
