fixed backend and added pagenation

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ server.servlet.context-path=/api
 springdoc.api-docs.path=/swagger
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.mail.host=localhost
 spring.mail.port=1025
