--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,8 +5,8 @@ jwt.refresh.expiration=604800000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/elections
 spring.datasource.username=root
-spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=secret
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mvc.view.prefix=
 spring.mvc.view.suffix=
