--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ jwt.refresh.expiration=604800000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/elections
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mvc.view.prefix=
