--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -29,4 +29,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.from=aaron.laan@hva.nl
 
 
-#spring.profiles.active=prod
+spring.profiles.active=prod
