--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ jwt.refresh.expiration=604800000
 spring.datasource.url=jdbc:postgresql://localhost:5432/elections
 spring.datasource.username=root
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mvc.view.prefix=
 spring.mvc.view.suffix=
@@ -25,5 +25,5 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.from=jouwMoeder@gmail.com
 
-spring.profiles.active=dev
