--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,49 +1,58 @@
-# This file is a template, and might need editing before it works on your project.
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-#
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
-
-stages:          # List of stages for jobs, and their order of execution
+stages:
   - build
-  - test
   - deploy
 
-build-job:       # This job runs in the build stage, which runs first.
+# Frontend Build
+build-frontend:
   stage: build
+  image: node:18
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - cd frontend
+    - npm install
+    - npm run build
+  artifacts:
+    paths:
+      - frontend/dist/
+    expire_in: 1 week  # Artefacten blijven een week beschikbaar
 
-unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
+# Backend Build
+build-backend:
+  stage: build
+  image: gradle:7.6-jdk17  # Gebruik de juiste Gradle/JDK-versie
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
+    - cd backend
+    - ./gradlew build
+  artifacts:
+    paths:
+      - backend/build/libs/
+    expire_in: 1 week
 
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
+# Deployment
+deploy-frontend:
+  stage: deploy
+  image: alpine:latest
+  before_script:
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
+    - chmod 600 ~/.ssh/id_digitalocean
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
+    - apk add --no-cache openssh
   script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
+    - scp -r frontend/dist/* root@$DROPLET_IP:/var/www/html/
+  only:
+    - deploy/production
 
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
+deploy-backend:
+  stage: deploy
+  image: alpine:latest
+  before_script:
+    - mkdir -p ~/.ssh
+    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
+    - chmod 600 ~/.ssh/id_digitalocean
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
+    - apk add --no-cache openssh
   script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+    - scp backend/build/libs/*.jar root@$DROPLET_IP:/path/to/deploy/
+    - ssh root@$DROPLET_IP 'systemctl restart elections'
+  only:
+    - deploy/production
