--- a/backend/src/main/resources/application-gavin.properties
+++ b/backend/src/main/resources/application-gavin.properties
@@ -13,7 +13,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 # MVC Configuration
 spring.mvc.view.prefix=
@@ -33,6 +33,3 @@ spring.mail.password=${SENDGRID_API_KEY}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.from=${MAIL_FROM}
-
-# Profile (Uncomment if needed)
-#spring.profiles.active=dev
