--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ deploy-frontend:
     - echo $DROPLET_IP
     - apk add --no-cache openssh  # Installeert OpenSSH voor ssh-keyscan
     - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
+    - echo $SSH_PRIVATE_KEY_DIGITALOCEAN > ~/.ssh/id_digitalocean
     - chmod 600 ~/.ssh/id_digitalocean
     - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
     - apk add --no-cache openssh
@@ -52,7 +52,7 @@ deploy-backend:
     - echo $DROPLET_IP
     - apk add --no-cache openssh  # Installeert OpenSSH voor ssh-keyscan
     - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
+    - echo $SSH_PRIVATE_KEY_DIGITALOCEAN > ~/.ssh/id_digitalocean
     - chmod 600 ~/.ssh/id_digitalocean
     - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
     - apk add --no-cache openssh
