--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,18 +32,14 @@ deploy-frontend:
   stage: deploy
   image: alpine:latest
   before_script:
-    - echo $DROPLET_IP
-    - echo $SSH_PRIVATE_KEY_DIGITALOCEAN
-    - apk add --no-cache openssh  # Installeert OpenSSH voor ssh-keyscan
+    - apk add --no-cache openssh  # Installeer OpenSSH
     - mkdir -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
-    - cat ~/.ssh/id_digitalocean
-    - ssh -i ~/.ssh/id_digitalocean root@$DROPLET_IP echo "SSH connection successful"
     - chmod 600 ~/.ssh/id_digitalocean
-    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts  # Voeg host key toe
   script:
-    - scp -r frontend/dist/* root@$DROPLET_IP:/var/www/vue-app/
-    - ssh root@$DROPLET_IP 'sudo systemctl restart nginx'
+    - scp -r frontend/dist/* root@$DROPLET_IP:/var/www/vue-app/  # Kopieer bestanden
+    - ssh root@$DROPLET_IP 'sudo systemctl restart nginx'  # Restart Nginx
   only:
     - deploy/production
 
@@ -51,17 +47,13 @@ deploy-backend:
   stage: deploy
   image: alpine:latest
   before_script:
-    - echo $DROPLET_IP
-    - echo $SSH_PRIVATE_KEY_DIGITALOCEAN
-    - apk add --no-cache openssh  # Installeert OpenSSH voor ssh-keyscan
+    - apk add --no-cache openssh  # Installeer OpenSSH
     - mkdir -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
-    - cat ~/.ssh/id_digitalocean
-    - ssh -i ~/.ssh/id_digitalocean root@$DROPLET_IP echo "SSH connection successful"
     - chmod 600 ~/.ssh/id_digitalocean
-    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts  # Voeg host key toe
   script:
-    - scp backend/build/libs/*.jar root@$DROPLET_IP:/opt/elections/
-    - ssh root@$DROPLET_IP 'sudo systemctl restart elections'
+    - scp backend/build/libs/*.jar root@$DROPLET_IP:/opt/elections/  # Kopieer bestanden
+    - ssh root@$DROPLET_IP 'sudo systemctl restart elections'  # Restart backend-service
   only:
     - deploy/production
