--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,14 +32,15 @@ deploy-frontend:
   stage: deploy
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh  # Installeer OpenSSH
+    - apk add --no-cache openssh
     - mkdir -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
     - chmod 600 ~/.ssh/id_digitalocean
-    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts  # Voeg host key toe
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
   script:
-    - scp -r frontend/dist/* root@$DROPLET_IP:/var/www/vue-app/  # Kopieer bestanden
-    - ssh root@$DROPLET_IP 'sudo systemctl restart nginx'  # Restart Nginx
+    - ssh -i ~/.ssh/id_digitalocean root@$DROPLET_IP echo "Testing SSH connection"
+    - scp -r frontend/dist/* root@$DROPLET_IP:/var/www/vue-app/
+    - ssh root@$DROPLET_IP 'sudo systemctl restart nginx'
   only:
     - deploy/production
 
@@ -47,13 +48,17 @@ deploy-backend:
   stage: deploy
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh  # Installeer OpenSSH
+    - apk add --no-cache openssh
     - mkdir -p ~/.ssh
     - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
     - chmod 600 ~/.ssh/id_digitalocean
-    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts  # Voeg host key toe
+    - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
   script:
-    - scp backend/build/libs/*.jar root@$DROPLET_IP:/opt/elections/  # Kopieer bestanden
-    - ssh root@$DROPLET_IP 'sudo systemctl restart elections'  # Restart backend-service
+    - ssh -i ~/.ssh/id_digitalocean root@$DROPLET_IP echo "Testing SSH connection"
+    - scp backend/build/libs/*.jar root@$DROPLET_IP:/opt/elections/
+    - ssh root@$DROPLET_IP 'sudo systemctl restart elections'
   only:
     - deploy/production
+
+
+
