--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,9 @@ build-frontend:
 # Backend Build
 build-backend:
   stage: build
+  tags:
+    - deploy
+    - digitalocean
   image: gradle:8.10.1-jdk21
   script:
     - cd backend
@@ -30,35 +33,38 @@ build-backend:
 # Deployment
 deploy-frontend:
   stage: deploy
+  tags:
+    - deploy
+    - digitalocean
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh
+    - apk add --no-cache openssh  # Installeer OpenSSH
     - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
-    - chmod 600 ~/.ssh/id_digitalocean
+    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
   script:
-    - ssh -i ~/.ssh/id_digitalocean root@$DROPLET_IP echo "Testing SSH connection"
-    - scp -r frontend/dist/* root@$DROPLET_IP:/var/www/vue-app/
-    - ssh root@$DROPLET_IP 'sudo systemctl restart nginx'
+    - scp -r frontend/dist/* $SERVER_USER@$DROPLET_IP:/var/www/vue-app/
+    - ssh $SERVER_USER@$DROPLET_IP 'sudo systemctl restart nginx'
   only:
     - deploy/production
 
 deploy-backend:
   stage: deploy
+  tags:
+    - deploy
+    - digitalocean
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh
+    - apk add --no-cache openssh  # Installeer OpenSSH
     - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_digitalocean
-    - chmod 600 ~/.ssh/id_digitalocean
+    - echo "$SSH_PRIVATE_KEY_DIGITALOCEAN" > ~/.ssh/id_rsa
+    - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan -H $DROPLET_IP >> ~/.ssh/known_hosts
   script:
-    - ssh -i ~/.ssh/id_digitalocean root@$DROPLET_IP echo "Testing SSH connection"
-    - scp backend/build/libs/*.jar root@$DROPLET_IP:/opt/elections/
-    - ssh root@$DROPLET_IP 'sudo systemctl restart elections'
+    - scp backend/build/libs/*.jar $SERVER_USER@$DROPLET_IP:/opt/elections/
+    - ssh $SERVER_USER@$DROPLET_IP 'sudo systemctl restart elections'
   only:
     - deploy/production
-
 
 
