Inshallah nnu doet ie het

--- a/backend/src/main/resources/application-gavin.properties
+++ b/backend/src/main/resources/application-gavin.properties
@@ -7,8 +7,8 @@ server.port=7420
 
 # Database Connection
 spring.datasource.url=jdbc:postgresql://db-postgresql-nyc1-52326-do-user-18484428-0.m.db.ondigitalocean.com:25060/defaultdb?sslmode=require
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_Jhv-JOIU7BtRvdzVoU5
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
@@ -29,7 +29,7 @@ springdoc.api-docs.path=/swagger
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
-spring.mail.password=${SENDGRID_API_KEY}
+spring.mail.password=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
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.from=${MAIL_FROM}
+spring.mail.from=gtjin1103@gmail.com
