fixed logo's path

--- a/backend/src/main/resources/application-gavin.properties
+++ b/backend/src/main/resources/application-gavin.properties
@@ -10,6 +10,12 @@ spring.datasource.url=jdbc:postgresql://db-postgresql-nyc1-52326-do-user-1848442
 spring.datasource.username=doadmin
 spring.datasource.password=AVNS_Jhv-JOIU7BtRvdzVoU5
 spring.datasource.driver-class-name=org.postgresql.Driver
+# HikariCP instellingen
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
 
 # JPA / Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
