Add: backend test ci.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,3 +47,6 @@ deploy-job:      # This job runs in the deploy stage.
   script:
     - echo "Deploying application..."
     - echo "Application successfully deployed."
+
+include:
+  - ".gitlab-ci.tests.yml"
