Fixed: ci file path.

--- a/.gitlab-ci.tests.yml
+++ b/.gitlab-ci.tests.yml
@@ -2,7 +2,7 @@ Backend Unit Test:
   image: openjdk:17-jdk-slim
   stage: test
   before_script:
-    - cd project/backend
+    - cd backend
     - export GRADLE_USER_HOME=`pwd`/.gradle
     - chmod +x ./gradlew
   after_script:
