--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -26,5 +26,6 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.from=testing@gmail.com
 
 spring.profiles.active=local
