--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,5 @@
 sonar.projectKey=Aaron2404_semster-3
 sonar.organization=aaron2404
 sonar.host.url=https://sonarcloud.io
-sonar.login=secret
+sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
-sonar.sources=src
-sonar.tests=test
-sonar.test.inclusions=**/*Test.java
-sonar.java.binaries=build
