--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.organization=aaron2404
 sonar.host.url=https://sonarcloud.io
 sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
+sonar.test.inclusions=**/*Test.java
+sonar.java.binaries=build
