--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,5 @@ sonar.host.url=https://sonarcloud.io
 sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
 sonar.test.inclusions=**/*Test.java
-sonar.java.binaries=build
+sonar.java.binaries=sonar.java.binaries=build/classes/java/main
+
