Fixed: sonarqube settings.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
 sonar.test.inclusions=**/*Test.java
-sonar.java.binaries=sonar.java.binaries=build/classes/java/main
+sonar.java.binaries=backend/build/classes/java/main
+
+
 
