--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,6 @@ sonar.organization=aaron2404
 sonar.host.url=https://sonarcloud.io
 sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
-sonar.test.inclusions=**/*Test.java
+sonar.test.inclusions=**/*Test.java,**/*Tests.java,**/test/**,**/tests/**
 sonar.java.binaries=backend/build/classes/java/main
-
-
-
+sonar.tests=backend/src/test,frontend/src/test
