Fixed: sonarqube settings.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.organization=aaron2404
 sonar.host.url=https://sonarcloud.io
 sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
-sonar.test.inclusions=**/*Test.java,**/*Tests.java,**/test/**,**/tests/**
+sonar.test.inclusions=**/*Test.java,**/*Tests.java,**/test/**,**/tests/**,frontend/cypress/integration/**
 sonar.java.binaries=backend/build/classes/java/main
-sonar.tests=backend/src/test,frontend/src/test
+sonar.tests=backend/src/test,frontend/src/test,frontend/cypress/integration
