Edited: sonarqube config.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
 sonar.test.inclusions=**/*Test.java,**/*Tests.java,**/test/**,**/tests/**,frontend/cypress/**
 sonar.java.binaries=backend/build/classes/java/main
-sonar.tests=backend/src/test,frontend/cypress/**
+sonar.tests=backend/src/test,frontend/cypress/
