Added test for topicController

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -25,5 +25,5 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.from=jouwMoeder@gmail.com
+spring.mail.from=test@gmail.com
 
