--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.organization=aaron2404
 sonar.host.url=https://sonarcloud.io
 sonar.sources=backend,frontend
 sonar.sourceEncoding=UTF-8
-sonar.test.inclusions=**/*Test.java,**/*Tests.java,**/test/**,**/tests/**,frontend/cypress/**
+sonar.test.inclusions=**/*Test.java,**/*Tests.java,**/test/**,**/tests/**,frontend/cypress/e2e/**
 sonar.java.binaries=backend/build/classes/java/main
-sonar.tests=backend/src/test,frontend/cypress/
+sonar.tests=backend/src/test/java,frontend/cypress/e2e
