Fixed: wrong name.

--- a/.gitlab-ci.mkdocs.yml
+++ b/.gitlab-ci.mkdocs.yml
@@ -1,6 +1,6 @@
-mkdocs:
+pages:
   stage: deploy
-  image: python:3.9
+  image: python:3.9-slim
   script:
     - pip install mkdocs mkdocs-material
     - mkdocs build --clean --site-dir public
