--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ include:
   - ".gitlab-ci.tests.yml"
   - ".gitlab-ci.sonarqube.yml"
   - ".gitlab-ci.mkdocs.yml"
+  - ".gitlab-ci.cypress.yml"
   - ".gitlab-ci.build-frontend.yml"
   - ".gitlab-ci.build-backend.yml"
   - ".gitlab-ci.deploy-frontend.yml"
