--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -4,10 +4,11 @@ run_cypress_tests:
   script:
     - npm ci
     - npm run build
-    - npx cypress run --env TS=true
+    - npx cypress run
   artifacts:
     paths:
       - cypress/videos
       - cypress/screenshots
   only:
-    - main
+    - merge_requests
+    - branches
