--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -4,7 +4,7 @@ run_cypress_tests:
   script:
     - npm ci
     - npm run build
-    - npx cypress run
+    - npx cypress run --config video=false
   artifacts:
     paths:
       - cypress/videos
