--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -1,8 +1,9 @@
 run_cypress_tests:
   stage: test
   image: cypress/included:12.0.0
-  script:
+  before_script:
     - cd frontend
+  script:
     - npm ci
     - npm run build
     - npx cypress run --config video=false
