--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -1,12 +1,20 @@
 run_cypress_tests:
   stage: test
   image: cypress/included:12.0.0
+  services:
+    - docker:dind
+  variables:
+    DOCKER_DRIVER: overlay2
   before_script:
+    - apk add --no-cache docker-compose
+    - docker-compose up -d
     - cd frontend
   script:
     - npm ci
     - npm run build
     - npx cypress run --config video=false
+  after_script:
+    - docker-compose down
   artifacts:
     paths:
       - cypress/videos
