--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -1,6 +1,8 @@
 run_cypress_tests:
   stage: test
   image: docker:latest
+  services:
+    - name: docker:dind
   variables:
     DOCKER_DRIVER: overlay2
   before_script:
