--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -1,11 +1,15 @@
 run_cypress_tests:
   stage: test
-  image: docker:latest
+  image: docker:latest  # Using Docker image with Docker Compose
   services:
     - name: docker:dind
+      alias: docker
   variables:
     DOCKER_DRIVER: overlay2
+    DOCKER_TLS_CERTDIR: ""
   before_script:
+    - apk add --no-cache docker-compose
+    - docker info
     - docker-compose up -d
     - cd frontend
   script:
