--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -1,6 +1,6 @@
 run_cypress_tests:
   stage: test
-  image: docker:latest  # Using Docker image with Docker Compose
+  image: docker:latest
   services:
     - name: docker:dind
       alias: docker
@@ -8,12 +8,11 @@ run_cypress_tests:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   before_script:
-    - apk add --no-cache docker-compose
-    - docker info
+    - apk add --no-cache nodejs npm docker-compose
     - docker-compose up -d
     - cd frontend
+    - npm i
   script:
-    - npm ci
     - npx cypress run
   after_script:
     - docker-compose down
