--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -8,7 +8,7 @@ run_cypress_tests:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   before_script:
-    - apk add --no-cache nodejs npm docker-compose
+    - apk add --no-cache docker-compose nodejs npm xvfb-run
     - docker-compose up -d
     - cd frontend
     - npm i
