--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -8,20 +8,19 @@ run_cypress_tests:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   before_script:
-    - apk add --no-cache 
-      docker-compose 
-      nodejs 
-      npm 
-      xvfb-run 
-      libgtk2.0-0 
-      libgtk-3-0 
-      libgbm-dev 
-      libnotify-dev 
-      libnss3 
-      libxss1 
-      libasound2 
-      libxtst6 
-      xauth 
+    - apk add --no-cache \
+      docker-compose \
+      nodejs \
+      npm \
+      xvfb-run \
+      libxtst \
+      libxss \
+      alsa-lib \
+      nss \
+      dbus \
+      ttf-freefont \
+      xorg-server \
+      gtk+3.0 \
       xvfb
     - docker-compose up -d
     - cd frontend
