--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -8,7 +8,10 @@ run_cypress_tests:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   before_script:
-    - apk add --no-cache docker-compose nodejs npm
+    - curl -sSL https://get.docker.com/ | sh
+    - curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+    - chmod +x /usr/local/bin/docker-compose
+    - apt-get update && apt-get install -y nodejs npm
     - docker-compose up -d
     - cd frontend
     - npm i
