--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -1,6 +1,6 @@
 run_cypress_tests:
   stage: test
-  image: cypress/browsers:22.12.0-alpine
+  image: cypress/browsers:22.12.0
   services:
     - name: docker:dind
       alias: docker
@@ -8,7 +8,7 @@ run_cypress_tests:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   before_script:
-    - apk add --no-cache docker-compose nodejs npm
+    - apt-get update && apt-get install -y docker-compose nodejs npm
     - docker-compose up -d
     - cd frontend
     - npm i
