--- a/.gitlab-ci.cypress.yml
+++ b/.gitlab-ci.cypress.yml
@@ -8,7 +8,7 @@ run_cypress_tests:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
   before_script:
-    - apt-get update && apt-get install -y docker-compose nodejs npm
+    - apt-get update && apt-get install docker-compose-plugin
     - docker-compose up -d
     - cd frontend
     - npm i
