--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite --port 7419",
+    "test": "cypress run",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview --port 7419 --host",
     "test:unit": "vitest",
@@ -35,6 +36,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.13.10",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
@@ -46,16 +48,19 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "babel-plugin-istanbul": "^7.0.0",
     "cypress": "^13.12.0",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-vue": "^9.23.0",
+    "istanbul": "^0.4.5",
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
     "start-server-and-test": "^2.0.4",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
+    "vite-plugin-istanbul": "^6.0.2",
     "vitest": "^1.6.0",
     "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-tsc": "^2.0.21"
