WIP deployment railway

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,11 +1,15 @@
 spring.application.name=elections
-cors.origin=http://localhost:5173
+cors.origin=http://localhost:7419
 jwt.expiration=86400000
 jwt.refresh.expiration=604800000
+server.port=7420
+
+#Swagger
+swagger.server-url=http://visie-op-de-uitslag-api.up.railway.app/api
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/elections
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.username=gavintjin
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mvc.view.prefix=
