--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,32 +1,45 @@
+# Application Settings
 spring.application.name=elections
-cors.origin=http://localhost:5173
-server.port=8080
+cors.origin=https://visie-op-de-uitslag.up.railway.app
 jwt.expiration=86400000
 jwt.refresh.expiration=604800000
+server.port=7420
 
-spring.datasource.url=jdbc:postgresql://dpg-cspkt20gph6c73edpj9g-a.frankfurt-postgres.render.com/elections_yai5
-spring.datasource.username=root
-spring.datasource.password=KyFoKGkOAO5NfBPhcX2vivYREBWqCpbP
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#Swagger
+swagger.server-url=https://visie-op-de-uitslag-api.up.railway.app/api
 
+# Database Connection
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# HikariCP instellingen
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=60000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+
+# JPA / Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+# MVC Configuration
 spring.mvc.view.prefix=
 spring.mvc.view.suffix=
 spring.main.web-application-type=servlet
 server.error.whitelabel.enabled=false
 
-server.servlet.context-path=/api
+# Context Path
+server.servlet.context-path=/api/
 springdoc.api-docs.path=/swagger
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
+# Mail Configuration (Optional)
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
-spring.mail.password=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
+spring.mail.password=${SENDGRID_API_KEY}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.from=aaron.laan@hva.nl
-
-
-spring.profiles.active=prod
+spring.mail.from=${SENDGRID_EMAIL}
