--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,7 @@
-VITE_API_BASE_URL=http://localhost:7420/api
-VITE_API_WS_URL=ws://localhost:7420/api
+#dev
+#VITE_API_BASE_URL=http://localhost:7420/api
+#VITE_API_WS_URL=ws://localhost:7420/api
+
+#prod
+VITE_API_BASE_URL=https://visie-op-de-uitslag-api.up.railway.app/api
+VITE_API_WS_URL=wss://visie-op-de-uitslag-api.up.railway.app/api
