--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,31 +1,1 @@
-spring.application.name=elections
-cors.origin=http://localhost:5173
-jwt.expiration=86400000
-jwt.refresh.expiration=604800000
-server.port=7420
-
-spring.datasource.url=jdbc:postgresql://${PG_HOST:localhost}:5432/elections
-spring.datasource.username=root
-spring.datasource.password=secret
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-spring.mvc.view.prefix=
-spring.mvc.view.suffix=
-spring.main.web-application-type=servlet
-server.error.whitelabel.enabled=false
-
-server.servlet.context-path=/api/
-springdoc.api-docs.path=/swagger
-
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
-spring.mail.from=test@gmail.com
-
-spring.profiles.active=gavin
+spring.profiles.active=dev
